Added a comment in html

--- a/Sorting/HtmlPage1.html
+++ b/Sorting/HtmlPage1.html
@@ -31,6 +31,7 @@
                     <td>{{employee.gender | lowercase}}</td>
                     <td>{{employee.salary | number}}</td>
                     <td>{{employee.salary | currency}}</td>
+                    <!--Adding a comment for next commit-->
                 </tr>
             </tbody>
         </table>
