Added few more comments

--- a/Sorting/HtmlPage1.html
+++ b/Sorting/HtmlPage1.html
@@ -26,6 +26,8 @@
                 </tr>
             </thead>
             <tbody>
+                <!--adding few comments-->
+                <!--adding a few more comments-->
                 <tr ng-repeat="employee in employees | orderBy : sortColumn : reverseSort">
                     <td>{{employee.name | uppercase}}</td>
                     <td>{{employee.dateOfBirth | date:"dd/MM/yyyy"}}</td>
